[metadata]
name = o3iss-ntapiam
version = 0.1.1
author = Nikolas Tapia
author_email = tapia@wias-berlin.de
description = "Iterated-sums signature in Rust"
url = https://github.com/ntapiam/o3iss
classifiers =
  Programming Language :: Rust
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
zip_safe = False
packages = o3iss

[options]
python_requires = >=3.6
