[metadata]
name = iss
version = 0.1.2
author = Nikolas Tapia
author_email = tapia@wias-berlin.de
description = Iterated-sums signature in Rust
url = https://github.com/ntapiam/o3iss
classifiers =
  Programming Language :: Rust
  Programming Language :: Python
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
zip_safe = False
